src/components/PersonalData/Notes/Notes.module.css
.wrap {
    display: block;
    padding: 20px 16px 20px 16px;
    background-color: #FFFFFF;
    border-radius: 10px;
    width: 100%;
    scroll-margin-bottom: 150px;
}

.heading {
    display: flex;
    justify-content: space-between;
    margin-bottom: 7px;
}

.title {
    color: #1F1F1F;
    font-size: 16px;
    font-weight: 700;
    margin-bottom: 10px;
}

.edit {
    cursor: pointer;
    border: none;
    background: transparent;
    padding: 0;
    display: flex;
    align-items: center;
    -webkit-tap-highlight-color: transparent;
}

.text {
    color: #1F1F1F;
    max-width: 250px;
    line-height: 1.3;
}

.editArea {
    width: 100%;
    scroll-margin-bottom: 150px;
}

.textarea {
    width: 100%;
    min-height: 70px;
    font-family: "Open Sans", sans-serif;
    font-size: 16px;
    resize: vertical;
    padding: 8px;
    scroll-margin-bottom: 150px;
}

.charCount {
    margin: 4px 0 0;
    text-align: right;
    font-size: 12px;
    line-height: 1.3;
    color: #717680;
    scroll-margin-bottom: 180px;
}

